--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,17 @@
   font-weight: 600;
 }
 
+@font-face {
+  font-family: "Lato";
+  src: url("../fonts/Lato/");
+}
+
+@font-face {
+  font-family: "Lato";
+  src: url("../fonts/Lato/Lato-Bold.ttf");
+  font-weight: 700;
+}
+
 /* Main css varibles */
 :root {
   /* Fonts*/
@@ -98,7 +109,7 @@ body {
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: #3988ff;
+  background-color: var(--color-links-hover);
 }
 
 .main-navigations__items a {
@@ -123,4 +134,72 @@ body {
 .hero {
   background: url("../assets/images/hero-bg.png") center center no-repeat;
   background-size: cover;
+}
+
+.hero-info {
+  padding-right: 150px;
+}
+
+.hero-info .title {
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 1.2;
+  color: var(--color-secondary);
+}
+
+.hero-info .discription {
+  color: var(--color-primary);
+  line-height: 1.6;
+  margin-top: 24px;
+}
+
+.hero-info .title span {
+  color: #3988ff;
+}
+
+.hero-image {
+  background: url("../assets/images/profile-bg.png") center 100px no-repeat;
+  background-size: contain;
+}
+
+.hero .container {
+  display: flex;
+  align-items: center;
+}
+
+.hero-image img {
+  width: 100%;
+}
+
+.more-info {
+  display: flex;
+  align-items: center;
+  margin-top: 36px;
+}
+
+.more-info a {
+  text-decoration: none;
+}
+
+.video-btn {
+  display: inline-block;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 30px #ffe6e6;
+  background-color: #fff;
+  margin-right: 24px;
+  position: relative;
+  cursor: pointer;
+}
+
+.video-btn::after {
+  content: "";
+  position: absolute;
+  top: 24px;
+  left: 30px;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 15px solid #1b45da;
 }
