--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Core styles */
 * {
   margin: 0;
   padding: 0;
@@ -53,7 +54,6 @@
   --color-links-hover: #3988ff;
 }
 
-/* Core styles */
 body {
   font-family: var(--font-default), sans-serif;
 }
@@ -74,13 +74,18 @@ body {
   font-weight: 500;
 }
 
+/* Main header styles */
+.main-header {
+  background-color: #fff5f5;
+  padding: 20px 0;
+}
+
 .main-header .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-/* Main header styles */
 .main-navigations__items {
   display: flex;
 }
@@ -134,6 +139,7 @@ body {
 .hero {
   background: url("../assets/images/hero-bg.png") center center no-repeat;
   background-size: cover;
+  padding: 100px 0;
 }
 
 .hero-info {
@@ -159,8 +165,13 @@ body {
 }
 
 .hero-image {
-  background: url("../assets/images/profile-bg.png") center 100px no-repeat;
-  background-size: contain;
+  background-image: url("../assets/images/profile-bg.png"),
+    url("../assets/images/Ellipse 11.png");
+  background-repeat: no-repeat, no-repeat;
+  background-size: contain, contain;
+  background-position: left bottom, right bottom;
+  padding-bottom: 60px;
+  position: relative;
 }
 
 .hero .container {
@@ -202,4 +213,86 @@ body {
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
   border-left: 15px solid #1b45da;
+}
+
+.icon-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+}
+
+.icon-left {
+  background-color: #e1f8fa;
+  position: absolute;
+  top: 100px;
+  left: 50px;
+}
+
+.icon-right {
+  background-color: #fae1e7;
+  position: absolute;
+  top: 80px;
+  right: 0;
+}
+
+/* About styles */
+.about {
+  padding: 100px 0;
+  text-align: center;
+}
+
+.about .title {
+  color: var(--color-secondary);
+  font-size: 32px;
+}
+
+.about .discription {
+  color: var(--color-primary);
+  padding: 24px 0 48px 0;
+  line-height: 1.6;
+}
+
+.our-team-image img {
+  width: 100%;
+}
+
+.about-our__more {
+  display: flex;
+  align-items: center;
+}
+
+.about .skills {
+  text-align: left;
+  margin-left: 48px;
+}
+.skills p {
+  margin-bottom: 16px;
+}
+
+.line-wrapper {
+  display: inline-block;
+  width: 488px;
+  height: 15px;
+  border-radius: 10px;
+  margin-bottom: 36px;
+  opacity: 0.1;
+}
+
+.line-wrapper__1 {
+  background-color: #e41a1a;
+}
+
+.line-wrapper__2 {
+  background-color: #da5a12;
+}
+
+.line-wrapper__3 {
+  background-color: #5bbb10;
+}
+
+.line-wrapper__4 {
+  background-color: #15c1cc;
 }
