--- a/css/style.css
+++ b/css/style.css
@@ -356,3 +356,58 @@ body {
 .line-wrapper__bg-4 {
   background-color: #15c1cc;
 }
+
+/* Features styles */
+.features {
+  text-align: center;
+}
+
+.features .discription {
+  margin: 24px 0 48px 0;
+  padding: 0 150px;
+  line-height: 28px;
+  color: var(--color-primary);
+}
+
+.features-items {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.features-item__card {
+  width: 263px;
+  height: 413px;
+  background-color: #fff;
+  border: 1px solid rgba(5, 12, 38, 0.05);
+  border-radius: 10px;
+  color: var(--color-primary);
+  padding: 28px 22px;
+}
+
+.features-item__card h3 {
+  color: var(--color-secondary);
+}
+
+.card-icon__wrapper {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
+.features-item__card:nth-child(1) .card-icon__wrapper {
+  background-color: rgba(255, 96, 96, 0.1);
+}
+
+.features-item__card:nth-child(2) .card-icon__wrapper {
+  background-color: rgba(243, 83, 170, 0.1);
+}
+
+.features-item__card:nth-child(3) .card-icon__wrapper {
+  background-color: rgba(197, 72, 255, 0.1);
+}
+
+.features-item__card:nth-child(4) .card-icon__wrapper {
+  background-color: rgba(79, 158, 252, 0.1);
+}
