--- a/css/style.css
+++ b/css/style.css
@@ -376,13 +376,17 @@ body {
 }
 
 .features-item__card {
-  width: 263px;
-  height: 413px;
+  width: 262px;
+  height: 412px;
   background-color: #fff;
   border: 1px solid rgba(5, 12, 38, 0.05);
   border-radius: 10px;
   color: var(--color-primary);
   padding: 28px 22px;
+}
+
+.card-icon__wrapper svg {
+  margin-top: 52px;
 }
 
 .features-item__card h3 {
@@ -410,4 +414,21 @@ body {
 
 .features-item__card:nth-child(4) .card-icon__wrapper {
   background-color: rgba(79, 158, 252, 0.1);
+}
+
+.features-item__card h3 {
+  margin: 30px 0 15px 0;
+}
+
+.features-item__card p {
+  margin-bottom: 25px;
+}
+
+/* Services styles */
+.services-card__item {
+  width: 360px;
+  height: 412px;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(104px);
 }
