--- a/css/style.css
+++ b/css/style.css
@@ -527,6 +527,42 @@ body {
 }
 
 /* Pricing styles */
+.pricing {
+  text-align: center;
+}
+
+.pricing .intro {
+  text-transform: uppercase;
+}
+
+.pricing .title {
+  margin: 15px 0 30px 0;
+  text-transform: uppercase;
+  color: var(--color-secondary);
+  font-size: 24px;
+}
+
+.billing-wrapper {
+  display: inline-block;
+  margin-bottom: 40px;
+  border: 1px solid #1b45da;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.billing-wrapper span {
+  display: inline-block;
+  padding: 10px 20px;
+  color: var(--color-primary);
+}
+
+.billing-wrapper span.active {
+  background-color: #3988ff;
+  border-radius: 4px;
+  color: #fff;
+  cursor: grab;
+}
+
 .billing-cards__wrapper {
   display: flex;
   align-items: center;
@@ -537,7 +573,6 @@ body {
   width: 360px;
   box-shadow: 0px 4px 30px rgba(153, 153, 153, 0.14);
   border-radius: 10px;
-  text-align: center;
   color: var(--color-primary);
 }
 
@@ -581,4 +616,22 @@ body {
   text-decoration: none;
   padding: 15px 30px;
   color: #3988ff;
+}
+
+.billing-card:hover {
+  background: linear-gradient(180deg, #d9315a 0%, #f3678a 100%);
+}
+
+.billing-card:hover a {
+  color: #fff;
+  background-color: #3988ff;
+}
+
+.billing-card:hover > div {
+  color: #fff;
+}
+
+/* Clients styles */
+.clients {
+  padding: 100px 0;
 }
