--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,9 @@
   /* Default link color*/
   --color-link: #575859;
   --color-links-hover: #3988ff;
+
+  /* Footer bg color */
+  --footer-bg-color: #050c26;
 }
 
 body {
@@ -72,6 +75,7 @@ body {
   color: var(--btn-color);
   cursor: pointer;
   font-weight: 500;
+  text-decoration: none;
 }
 
 /* Main header styles */
@@ -634,4 +638,75 @@ body {
 /* Clients styles */
 .clients {
   padding: 100px 0;
+}
+
+/* Footer styles */
+.footer {
+  background-color: var(--footer-bg-color);
+  color: #fff;
+}
+
+.footer .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.footer .container > div {
+  width: 20%;
+}
+
+.footer hr {
+  color: #fff;
+}
+
+.footer-container {
+  width: 1140px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.container > div .brand {
+  margin-bottom: 30px;
+  text-transform: uppercase;
+  font-family: "Lato", sans-serif;
+  font-weight: 800;
+}
+
+.footer .brand-info {
+  opacity: 0.6;
+  line-height: 1.6;
+}
+
+.container > div .header {
+  margin-bottom: 30px;
+}
+
+.footer .services li,
+.footer .support li {
+  list-style: none;
+  line-height: 2;
+}
+
+.footer .email a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.social-networks {
+  margin: 10px 0 20px 0;
+}
+
+.social-networks a {
+  margin-right: 10px;
+  color: #fff;
+}
+
+.footer-container hr {
+  opacity: 0.1;
+}
+
+.footer-container p {
+  padding: 30px 0;
+  color: var(--color-primary);
 }
